style(slate): update style to prevent submit button being hidden on mobile

--- a/src/scss/components/SlateForm.module.scss
+++ b/src/scss/components/SlateForm.module.scss
@@ -49,3 +49,9 @@
 .slate-modal-header button:focus {
   background-color: #fff;
 }
+
+@media screen and (max-width: $breakpoint-small) {
+  .slate-dialog-container {
+    padding-bottom: 5rem;
+  }
+}
